// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders cells for passed empty field 1`] = `
.emotion-4 {
  display: inline-block;
  padding: 10px;
  border: 2px solid lightgray;
}

.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 10px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  border-color: gray;
}

<div
  className="emotion-4"
>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <br />
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Field renders filled cells snapshot check 1`] = `
.emotion-4 {
  display: inline-block;
  padding: 10px;
  border: 2px solid lightgray;
}

.emotion-3 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 10px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  border-color: gray;
}

.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 10px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  border-color: lightgray;
  color: gray;
}

<div
  className="emotion-4"
>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    x
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    o
  </button>
  <br />
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    o
  </button>
  <button
    className="emotion-3"
    onClick={[Function]}
  >
    
  </button>
</div>
`;
